# alfred-fortune-cookie

./: README.md  info.plist  pyproject.toml
src/: main.py
