[tool.poetry]
name = "Fortune Cookie"
version = "0.1.0"
description = "Read your fortune!"
documentation = "https://github.com/fedecalendino/alfred-fortune-cookie/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-fortune-cookie"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
alfred-pyflow = "latest"

[tool.poetry.dev-dependencies]
black = "latest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
