[tool.poetry]
name = "Fortune Cookie"
version = "0.1.1"
description = "Read your fortune!"
documentation = "https://github.com/fedecalendino/alfred-fortune-cookie/blob/main/README.md"
homepage = "https://github.com/fedecalendino/alfred-fortune-cookie"
license = "MIT"

authors = [
    "Fede Calendino <fede@calendino.com>"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
alfred-pyflow = "^0.4.5"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
ddt = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
